[package]
name = "slope"
version = "0.1.0"
authors = ["yoni <svechinskyy@gmail.com>"]

[dependencies]
tiny-keccak = "1.4.2"
ring = "0.12.1"
untrusted = "0.5.0"
data-encoding = "2.1.1"
time = "0.1.40"
clap = {version = "2.31", features = ["yaml"]}
serde = "1.0.66"
serde_derive = "1.0"
serde_json = "1.0.21"


